--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -27,7 +27,7 @@
                 <ul id="sidebarnav">
                     <li class="nav-small-cap">
                         <i class="ti ti-dots nav-small-cap-icon fs-4"></i>
-                        <!--                         <span class="hide-menu">Navigation</span> -->
+                        <span class="hide-menu">Home</span>
                     </li>
                     @if (User.Identity?.IsAuthenticated ?? false)
                     {
