Login is working

--- a/Views/Auth/Login.cshtml
+++ b/Views/Auth/Login.cshtml
@@ -23,6 +23,7 @@
                                 <div class="mb-4">
                                     <label asp-for="Password" class="form-label">Password</label>
                                     <input asp-for="Password" type="password" class="form-control">
+                                    <span asp-validation-for="Password" class="text-danager"></span>
                                 </div>
                                 <div class="d-flex align-items-center justify-content-between mb-4">
                                     <!--  <a class="text-primary fw-bold" href="./index.html">Forgot Password ?</a> -->
