Example table data is working file

--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -7,6 +7,8 @@
     <script type="importmap"></script>
     <link rel="shortcut icon" type="image/png" href="~/assets/images/logos/favicon.png"/>
     <link rel="stylesheet" href="~/assets/css/styles.min.css"/>
+    <link href="https://cdn.datatables.net/1.12.1/css/dataTables.bootstrap5.min.css" rel="stylesheet"/>
+    <link href="https://cdn.datatables.net/responsive/2.3.0/css/responsive.bootstrap5.min.css" rel="stylesheet"/>
 
 </head>
 <body>
@@ -136,6 +138,10 @@
 <script src="~/assets/libs/apexcharts/dist/apexcharts.min.js"></script>
 <script src="~/assets/libs/simplebar/dist/simplebar.js"></script>
 <script src="~/assets/js/dashboard.js"></script>
+<script src="https://cdn.datatables.net/1.12.1/js/jquery.dataTables.min.js"></script>
+<script src="https://cdn.datatables.net/1.12.1/js/dataTables.bootstrap4.min.js"></script>
+<script src="https://cdn.datatables.net/responsive/2.3.0/js/dataTables.responsive.min.js"></script>
+<script src="https://cdn.datatables.net/responsive/2.3.0/js/responsive.bootstrap4.min.js"></script>
 @await RenderSectionAsync("Scripts", required: false)
 </body>
 </html>
