Now layout is final

--- a/Views/Admin/UserManage.cshtml
+++ b/Views/Admin/UserManage.cshtml
@@ -2,6 +2,7 @@
     ViewData["Title"] = "User Manage";
 }
 
+<div class="container">
 <h1>This is Admin User Manage</h1>
 
 <table class="table table-hover" id="usersTable">
@@ -474,6 +475,7 @@
 </tr>
 </tbody>
 </table>
+</div>
 
 @section scripts{
     <script>
