--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -16,9 +16,9 @@
     <!-- Sidebar Start -->
     <aside class="left-sidebar">
         <div>
-            <div class="brand-logo d-flex align-items-center justify-content-between" style="background-color: #e3f2fd;">
+            <div class="brand-logo d-flex align-items-center justify-content-between bg-primary">
                 <p class="text-nowrap logo-img">
-                    <p class="fw-bold text-uppercase text-primary" style="font-size:30px">Bill Tracker</p>
+                    <p class="fw-bold text-uppercase text-white" style="font-size:30px">Bill Tracker</p>
                 </p>
                 <div class="close-btn d-xl-none d-block sidebartoggler cursor-pointer" id="sidebarCollapse">
                     <i class="ti ti-x fs-8"></i>
@@ -71,7 +71,7 @@
     <div class="body-wrapper">
         <!-- Header Start -->
         <header class="app-header">
-            <nav class="navbar navbar-expand-lg navbar-light" style="background-color: #e3f2fd;">
+            <nav class="navbar navbar-expand-lg navbar-light bg-primary">
                 <ul class="navbar-nav">
                     <li class="nav-item d-block d-xl-none">
                         <a class="nav-link sidebartoggler nav-icon-hover" id="headerCollapse" href="javascript:void(0)">
