--- a/Views/Admin/UserManage.cshtml
+++ b/Views/Admin/UserManage.cshtml
@@ -2,3 +2,9 @@
     ViewData["Title"] = "User Manage";
 }
 
+<div class="container">
+    <div class="row">
+        <h3>User Manage</h3>
+        <a asp-controller="Admin" asp-action="AddUser" class="btn btn-primary btn-sm">Add New User</a>
+    </>
+</div>
