--- a/Views/Admin/AddUser.cshtml
+++ b/Views/Admin/AddUser.cshtml
@@ -1,4 +1,4 @@
-@model BillTracker.Models.ViewModels.AddUserViewModel;
+@model BillTracker.Models.ViewModels.AddUserViewModel
 
 @{
     ViewData["Title"] = "Add User";
@@ -6,7 +6,7 @@
 
 <div class="container my-5">
     <h1 class="text-center mb-4">@ViewData["Title"]</h1>
-
+    <a asp-action="UserManage" asp-controller="Admin" class="btn btn-secondary">Back To User List</a>
     <form asp-action="AddUser" method="post">
         <div class="row g-3">
             <div class="col-md-6">
