--- a/Views/User/Dashboard.cshtml
+++ b/Views/User/Dashboard.cshtml
@@ -53,33 +53,26 @@
                     <td>
                         @if (product.Status)
                         {
-                            <span class="badge bg-success">Pass</span>
+                            <span class="badge bg-success">Approve</span>
                         }
                         else
                         {
-                            <span class="badge bg-secondary">Waiting For Approve</span>
+                            <span class="badge bg-secondary">Not Approve</span>
                         }
                     </td>
                     <td>
-                        @if (product.Status)
+                        @if (product.Status || product.RequestForDeletion)
                         {
                             <span class="badge bg-success"></span>
                         }
                         else
                         {
-                            if (product.RequestForDeletion)
-                            {
-                                
-                            }
-                            else
-                            {
-                                <form asp-action="DeleteRequest" method="post" class="d-inline">
-                                    <input type="hidden" name="id" value="@product.Id"/>
-                                    <button type="submit" class="btn btn-sm @((product.RequestForDeletion ? "btn-danger" : "btn-success"))">
-                                        @(product.RequestForDeletion ? "Wating" : "Delete")
-                                    </button>
-                                </form>
-                            }
+                            <form asp-action="DeleteRequest" method="post" class="d-inline">
+                                <input type="hidden" name="id" value="@product.Id"/>
+                                <button type="submit" class="btn btn-sm @((product.RequestForDeletion ? "btn-danger" : "btn-success"))">
+                                    @(product.RequestForDeletion ? "Wating" : "Delete")
+                                </button>
+                            </form>
                         }
                     </td>
                 </tr>
