--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -88,11 +88,11 @@
                                     <div class="dropdown-menu dropdown-menu-end dropdown-menu-animate-up"
                                         aria-labelledby="drop2">
                                         <div class="message-body">
-                                            <a asp-area="" asp-controller="User" asp-action="Profile"
-                                                class="d-flex align-items-center gap-2 dropdown-item">
-                                                <i class="ti ti-user fs-6"></i>
-                                                <p class="mb-0 fs-3">Profile</p>
-                                            </a>
+                                            @* <a asp-area="" asp-controller="User" asp-action="Profile" *@
+                                            @*     class="d-flex align-items-center gap-2 dropdown-item"> *@
+                                            @*     <i class="ti ti-user fs-6"></i> *@
+                                            @*     <p class="mb-0 fs-3">Profile</p> *@
+                                            @* </a> *@
                                             <a asp-area="" asp-controller="Auth" asp-action="ResetPassword"
                                                 class="d-flex align-items-center gap-2 dropdown-item">
                                                 <i class="ti ti-key fs-6"></i>
