--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -1,4 +1,6 @@
-﻿<!DOCTYPE html>
+﻿@using System.Security.Claims
+@using Microsoft.AspNetCore.Mvc.TagHelpers
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="utf-8" />
@@ -12,126 +14,131 @@
     <script src="https://cdn.jsdelivr.net/npm/qrcode/build/qrcode.min.js"></script>
 </head>
 <body>
-    <div class="page-wrapper" id="main-wrapper" data-layout="vertical" data-navbarbg="skin6" data-sidebartype="full"
-        data-sidebar-position="fixed" data-header-position="fixed">
-        <!-- Sidebar Start -->
-        <aside class="left-sidebar">
-            <div>
-                <div class="brand-logo d-flex align-items-center justify-content-between bg-primary">
-                    <p class="text-nowrap logo-img">
+@{
+    var userName = User.Identity?.IsAuthenticated ?? false ? User.FindFirst(ClaimTypes.Name)?.Value : "Guest";
+    ViewBag.UserName = userName;
+}
+<div class="page-wrapper" id="main-wrapper" data-layout="vertical" data-navbarbg="skin6" data-sidebartype="full"
+     data-sidebar-position="fixed" data-header-position="fixed">
+    <!-- Sidebar Start -->
+    <aside class="left-sidebar">
+        <div>
+            <div class="brand-logo d-flex align-items-center justify-content-between bg-primary">
+                <p class="text-nowrap logo-img">
                     <p class="fw-bold text-uppercase text-white" style="font-size:30px">Bill Tracker</p>
-                    </p>
-                    <div class="close-btn d-xl-none d-block sidebartoggler cursor-pointer" id="sidebarCollapse">
-                        <i class="ti ti-x fs-8"></i>
-                    </div>
+                </p>
+                <div class="close-btn d-xl-none d-block sidebartoggler cursor-pointer" id="sidebarCollapse">
+                    <i class="ti ti-x fs-8"></i>
                 </div>
-                <nav class="sidebar-nav scroll-sidebar" data-simplebar="">
-                    <ul id="sidebarnav">
-                        <li class="nav-small-cap">
-                            <i class="ti ti-dots nav-small-cap-icon fs-4"></i>
-                            <span class="hide-menu">Home</span>
-                        </li>
+            </div>
+            <nav class="sidebar-nav scroll-sidebar" data-simplebar="">
+                <ul id="sidebarnav">
+                    <li class="nav-small-cap">
+                        <i class="ti ti-dots nav-small-cap-icon fs-4"></i>
+                        <span class="hide-menu">Home</span>
+                    </li>
+                    @if (User.Identity?.IsAuthenticated ?? false)
+                    {
+                        if (User.IsInRole("Admin"))
+                        {
+                            <li class="sidebar-item">
+                                <a class="sidebar-link" asp-area="" asp-controller="Admin" asp-action="Dashboard">
+                                    <i class="ti ti-layout-dashboard"></i>
+                                    <span class="hide-menu">Dashboard</span>
+                                </a>
+                            </li>
+                            <li class="sidebar-item">
+                                <a class="sidebar-link" asp-area="" asp-controller="Admin" asp-action="UserManage">
+                                    <i class="ti ti-user"></i>
+                                    <span class="hide-menu">User Manage</span>
+                                </a>
+                            </li>
+                        }
+                        else if (User.IsInRole("User"))
+                        {
+                            <li class="sidebar-item">
+                                <a class="sidebar-link" asp-area="" asp-controller="User" asp-action="Dashboard">
+                                    <i class="ti ti-layout-dashboard"></i>
+                                    <span class="hide-menu">User Dashboard</span>
+                                </a>
+                            </li>
+                        }
+                    }
+                </ul>
+            </nav>
+        </div>
+    </aside>
+    <!-- Sidebar End -->
+    <div class="body-wrapper">
+        <!-- Header Start -->
+        <header class="app-header">
+            <nav class="navbar navbar-expand-lg navbar-light bg-primary">
+                <ul class="navbar-nav">
+                    <li class="nav-item d-block d-xl-none">
+                        <a class="nav-link sidebartoggler nav-icon-hover" id="headerCollapse"
+                           href="javascript:void(0)">
+                            <i class="ti ti-menu-2"></i>
+                        </a>
+                    </li>
+                </ul>
+                <div class="navbar-collapse justify-content-end px-0" id="navbarNav">
+                    <ul class="navbar-nav flex-row ms-auto align-items-center justify-content-end">
                         @if (User.Identity?.IsAuthenticated ?? false)
                         {
-                            if (User.IsInRole("Admin"))
-                            {
-                                <li class="sidebar-item">
-                                    <a class="sidebar-link" asp-area="" asp-controller="Admin" asp-action="Dashboard">
-                                        <i class="ti ti-layout-dashboard"></i>
-                                        <span class="hide-menu">Dashboard</span>
-                                    </a>
-                                </li>
-                                <li class="sidebar-item">
-                                    <a class="sidebar-link" asp-area="" asp-controller="Admin" asp-action="UserManage">
-                                        <i class="ti ti-user"></i>
-                                        <span class="hide-menu">User Manage</span>
-                                    </a>
-                                </li>
-                            }
-                            else if (User.IsInRole("User"))
-                            {
-                                <li class="sidebar-item">
-                                    <a class="sidebar-link" asp-area="" asp-controller="User" asp-action="Dashboard">
-                                        <i class="ti ti-layout-dashboard"></i>
-                                        <span class="hide-menu">User Dashboard</span>
-                                    </a>
-                                </li>
-                            }
+                            <li class="nav-item dropdown">
+                                <a class="nav-link nav-icon-hover" href="javascript:void(0)" id="drop2"
+                                   data-bs-toggle="dropdown" aria-expanded="false">
+                                    <img src="~/images/profile/user-1.jpg" alt="" width="35" height="35"
+                                         class="rounded-circle">
+                                </a>
+                                <div class="dropdown-menu dropdown-menu-end dropdown-menu-animate-up"
+                                     aria-labelledby="drop2">
+                                    <div class="message-body">
+                                        <a
+                                            class="d-flex align-items-center gap-2 dropdown-item">
+                                            <i class="ti ti-user fs-6"></i>
+                                            <p class="mb-0 fs-3">Profile: @ViewBag.UserName</p>
+                                        </a>
+                                        <a asp-area="" asp-controller="Auth" asp-action="ResetPassword"
+                                           class="d-flex align-items-center gap-2 dropdown-item">
+                                            <i class="ti ti-key fs-6"></i>
+                                            <p class="mb-0 fs-3">Reset Password</p>
+                                        </a>
+                                        <a asp-area="" asp-controller="Auth" asp-action="Logout"
+                                           class="btn btn-outline-primary mx-3 mt-2 d-block">Logout</a>
+                                    </div>
+                                </div>
+                            </li>
                         }
                     </ul>
-                </nav>
-            </div>
-        </aside>
-        <!-- Sidebar End -->
-        <div class="body-wrapper">
-            <!-- Header Start -->
-            <header class="app-header">
-                <nav class="navbar navbar-expand-lg navbar-light bg-primary">
-                    <ul class="navbar-nav">
-                        <li class="nav-item d-block d-xl-none">
-                            <a class="nav-link sidebartoggler nav-icon-hover" id="headerCollapse"
-                                href="javascript:void(0)">
-                                <i class="ti ti-menu-2"></i>
-                            </a>
-                        </li>
-                    </ul>
-                    <div class="navbar-collapse justify-content-end px-0" id="navbarNav">
-                        <ul class="navbar-nav flex-row ms-auto align-items-center justify-content-end">
-                            @if (User.Identity?.IsAuthenticated ?? false)
-                            {
-                                <li class="nav-item dropdown">
-                                    <a class="nav-link nav-icon-hover" href="javascript:void(0)" id="drop2"
-                                        data-bs-toggle="dropdown" aria-expanded="false">
-                                        <img src="~/images/profile/user-1.jpg" alt="" width="35" height="35"
-                                            class="rounded-circle">
-                                    </a>
-                                    <div class="dropdown-menu dropdown-menu-end dropdown-menu-animate-up"
-                                        aria-labelledby="drop2">
-                                        <div class="message-body">
-                                            @* <a asp-area="" asp-controller="User" asp-action="Profile" *@
-                                            @*     class="d-flex align-items-center gap-2 dropdown-item"> *@
-                                            @*     <i class="ti ti-user fs-6"></i> *@
-                                            @*     <p class="mb-0 fs-3">Profile</p> *@
-                                            @* </a> *@
-                                            <a asp-area="" asp-controller="Auth" asp-action="ResetPassword"
-                                                class="d-flex align-items-center gap-2 dropdown-item">
-                                                <i class="ti ti-key fs-6"></i>
-                                                <p class="mb-0 fs-3">Reset Password</p>
-                                            </a>
-                                            <a asp-area="" asp-controller="Auth" asp-action="Logout"
-                                                class="btn btn-outline-primary mx-3 mt-2 d-block">Logout</a>
-                                        </div>
-                                    </div>
-                                </li>
-                            }
-                        </ul>
-                    </div>
-                </nav>
-            </header>
-            <!-- Header End -->
-            <div class="container-fluid">
-                @RenderBody()
-            </div>
-            <footer class="border-top footer text-muted">
-                <div class="container">
-                    &copy; @DateTime.Now.Year - Bill Tracker - <a asp-area="" asp-controller="Home"
-                        asp-action="Privacy">Privacy</a>
                 </div>
-            </footer>
+            </nav>
+        </header>
+        <!-- Header End -->
+        <div class="container-fluid">
+            @RenderBody()
         </div>
+        <footer class="border-top footer text-muted">
+            <div class="container">
+                &copy; @DateTime.Now.Year - Bill Tracker -
+                <a asp-area="" asp-controller="Home"
+                   asp-action="Privacy">Privacy</a>
+            </div>
+        </footer>
     </div>
+</div>
 
-    <script src="~/libs/jquery/dist/jquery.min.js"></script>
-    <script src="~/libs/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="~/js/sidebarmenu.js"></script>
-    <script src="~/js/app.min.js"></script>
-    <script src="~/libs/apexcharts/dist/apexcharts.min.js"></script>
-    <script src="~/libs/simplebar/dist/simplebar.js"></script>
-    <script src="~/js/dashboard.js"></script>
-    <script src="https://cdn.datatables.net/1.12.1/js/jquery.dataTables.min.js"></script>
-    <script src="https://cdn.datatables.net/1.12.1/js/dataTables.bootstrap4.min.js"></script>
-    <script src="https://cdn.datatables.net/responsive/2.3.0/js/dataTables.responsive.min.js"></script>
-    <script src="https://cdn.datatables.net/responsive/2.3.0/js/responsive.bootstrap4.min.js"></script>
-    @await RenderSectionAsync("Scripts", required: false)
+<script src="~/libs/jquery/dist/jquery.min.js"></script>
+<script src="~/libs/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+<script src="~/js/sidebarmenu.js"></script>
+<script src="~/js/app.min.js"></script>
+<script src="~/libs/apexcharts/dist/apexcharts.min.js"></script>
+<script src="~/libs/simplebar/dist/simplebar.js"></script>
+<script src="~/js/dashboard.js"></script>
+<script src="https://cdn.datatables.net/1.12.1/js/jquery.dataTables.min.js"></script>
+<script src="https://cdn.datatables.net/1.12.1/js/dataTables.bootstrap4.min.js"></script>
+<script src="https://cdn.datatables.net/responsive/2.3.0/js/dataTables.responsive.min.js"></script>
+<script src="https://cdn.datatables.net/responsive/2.3.0/js/responsive.bootstrap4.min.js"></script>
+@await RenderSectionAsync("Scripts", required: false)
 </body>
 </html>
